--- a/onlineshopping/pom.xml
+++ b/onlineshopping/pom.xml
@@ -16,6 +16,13 @@
   
   <dependencies>
   
+  	<!-- Linking backend project -->
+  	<dependency>
+ 		<groupId>net.skc</groupId>
+	  	<artifactId>shoppingbackend</artifactId>
+	  	<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  
   	<!-- JAVA EE -->
   	<dependency>
   		<groupId>javax</groupId>
